@@ -3,6 +3,6 @@ _Name=System Monitor
 _Comment=View current processes and monitor system state
 TryExec=procman
 Exec=procman
-Icon=gnome-monitor.png
+Icon=procman.png
 Terminal=0
 Type=Application
