@@ -1,3 +1,7 @@
+2002-01-26  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procman.desktop.in: use newly changed procman.png
+
 2002-01-21  Kevin Vandersloot <kfv101@psu.edu>
 
 	* configure.in: add bt_BR to translated files
